<resources>
    <string name="app_name">My Application_register page</string>
    <string name="first_name">FIRST-NAME</string>
    <string name="last_name">LAST-NAME</string>
    <string name="email">EMAIL</string>
    <string name="date_of_birth">DATE-OF-BIRTH</string>
    <string name="password">PASSWORD</string>
    <string name="policy">I agree to all the terms and conditions</string>
    <string name="register">REGISTER</string>
</resources>