<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="415dp"
        android:layout_height="745dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/register_2" />

    <TextView
        android:id="@+id/login_pass"
        android:layout_width="378dp"
        android:layout_height="42dp"
        android:layout_marginTop="392dp"
        android:background="#F6F3F3"
        android:text="@string/password"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/login_email"
        android:layout_width="379dp"
        android:layout_height="46dp"
        android:layout_marginTop="320dp"
        android:background="#F6F3F3"
        android:text="@string/email"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <Button
        android:id="@+id/login"
        android:layout_width="146dp"
        android:layout_height="59dp"
        android:layout_marginBottom="144dp"
        android:fontFamily="casual"
        android:text="@string/register"
        android:textColor="#8C9EFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="401dp"
        android:layout_height="48dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="monospace"
        android:text="@string/policy"
        android:textAlignment="center"
        android:textColor="#F3F3F3"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="332dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo_3" />

</androidx.constraintlayout.widget.ConstraintLayout>